정규표현식 추가중

--- a/사전.ipynb
+++ b/사전.ipynb
@@ -9,8 +9,10 @@
       "source": [
         "# 1. pickle 모듈 정리\n",
         "\n",
+        "\n",
         "* 파이썬 객체를 저장하고 불러올수 있게 만들어 주는 모듈\n",
         "    * 리스트, 딕셔너리, 클래스, 함수 등등\n",
+        "\n",
         "\n",
         "* binary형태로 저장해줘서 용량 압축이됨\n",
         "    * binary형태로 저장한는 다른 방법도 있지만 pickle모듈이 가장 유용함"
@@ -3263,7 +3265,6 @@
       "source": [
         "# 3\n",
         "\n",
-        "\n",
         "df1.insert(loc = 0, column = 'e', value = 1)"
       ]
     },
@@ -5299,7 +5300,7 @@
       "metadata": {},
       "source": [
         "## 특정 문자열을 포함하는 데이터 추출\n",
-        "2023/09/4\n",
+        "2023/09/04\n",
         "\n",
         "* `df.str.contains()`\n",
         "* `df.str.startswith()`\n",
@@ -8257,7 +8258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -8266,7 +8267,7 @@
               "IPv4Address('10.10.10.10')"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -8430,7 +8431,7 @@
         }
       ],
       "source": [
-        "ipaddress.ip_network('10.10.10.0/24')"
+        "ipaddress.ip_network('10.10.10.0/24')\n"
       ]
     },
     {
@@ -8576,22 +8577,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[IPv4Address('10.10.10.0'), IPv4Address('10.10.10.1')]"
+              "[IPv4Address('10.10.10.1'),\n",
+              " IPv4Address('10.10.10.2'),\n",
+              " IPv4Address('10.10.10.3'),\n",
+              " IPv4Address('10.10.10.4'),\n",
+              " IPv4Address('10.10.10.5'),\n",
+              " IPv4Address('10.10.10.6'),\n",
+              " IPv4Address('10.10.10.7'),\n",
+              " IPv4Address('10.10.10.8'),\n",
+              " IPv4Address('10.10.10.9'),\n",
+              " IPv4Address('10.10.10.10'),\n",
+              " IPv4Address('10.10.10.11'),\n",
+              " IPv4Address('10.10.10.12'),\n",
+              " IPv4Address('10.10.10.13'),\n",
+              " IPv4Address('10.10.10.14')]"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "list(ipaddress.ip_network('10.10.10.0/31').hosts())"
+        "list(ipaddress.ip_network('10.10.10.0/28').hosts())"
       ]
     },
     {
@@ -8803,7 +8817,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        ". 기호"
+        ". 기호\n",
+        "\n",
+        "`.`은 한 개의 임의의 문자를 나타냅니다. 예를 들어서 정규 표현식이 a.c라고 합시다.   \n",
+        "a와 c 사이에는 어떤 1개의 문자라도 올 수 있습니다. akc, azc, avc, a5c, a!c와 같은 형태는 모두 a.c의 정규 표현식과 매치됩니다.\n",
+        "\n"
       ]
     },
     {
@@ -8840,7 +8858,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "? 기호"
+        "`?` 기호\n",
+        "\n",
+        "?는 ?앞의 문자가 존재할 수도 있고 존재하지 않을 수도 있는 경우를 나타냅니다. 예를 들어서 정규 표현식이 ab?c라고 합시다.   \n",
+        "이 경우 이 정규 표현식에서의 b는 있다고 취급할 수도 있고, 없다고 취급할 수도 있습니다. 즉, abc와 ac 모두 매치할 수 있습니다."
       ]
     },
     {
@@ -8898,7 +8919,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* 기호"
+        "`*` 기호\n",
+        "\n",
+        "\\*은 바로 앞의 문자가 0개 이상일 경우를 나타냅니다. 앞의 문자는 존재하지 않을 수도 있으며,  \n",
+        "또는 여러 개일 수도 있습니다. 정규 표현식이 ab*c라면 ac, abc, abbc, abbbc 등과 매치할 수 있으며 b의 개수는 무수히 많을 수 있습니다."
       ]
     },
     {
@@ -8974,7 +8998,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\\+ 기호"
+        "`+` 기호\n",
+        "\n",
+        "+는 *와 유사합니다. 다른 점은 앞의 문자가 최소 1개 이상이어야 합니다.  \n",
+        "정규 표현식이 ab+c라고 한다면 ac는 매치되지 않습니다. 하지만 abc, abbc, abbbc 등과 매치할 수 있으며 b의 개수는 무수히 많을 수 있습니다."
       ]
     },
     {
@@ -9019,7 +9046,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "^기호"
+        "`^`기호\n",
+        "\n",
+        "^는 시작되는 문자열을 지정합니다. 정규표현식이 ^ab라면 문자열 ab로 시작되는 경우 매치합니다."
       ]
     },
     {
@@ -9064,7 +9093,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "{숫자} 기호"
+        "`{숫자}` 기호\n",
+        "\n",
+        "문자에 해당 기호를 붙이면, 해당 문자를 숫자만큼 반복한 것을 나타냅니다.  \n",
+        "예를 들어서 정규 표현식이 ab{2}c라면 a와 c 사이에 b가 존재하면서 b가 2개인 문자열에 대해서 매치합니다."
       ]
     },
     {
@@ -9118,7 +9150,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "{숫자1, 숫자2} 기호"
+        "`{숫자1, 숫자2}` 기호\n",
+        "\n",
+        "문자에 해당 기호를 붙이면, 해당 문자를 숫자1 이상 숫자2 이하만큼 반복합니다.  \n",
+        "예를 들어서 정규 표현식이 ab{2,8}c라면 a와 c 사이에 b가 존재하면서 b는 2개 이상 8개 이하인 문자열에 대해서 매치합니다."
       ]
     },
     {
@@ -9163,7 +9198,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "{숫자.} 기호"
+        "`{숫자.}` 기호\n",
+        "\n",
+        "문자에 해당 기호를 붙이면 해당 문자를 숫자 이상 만큼 반복합니다.  \n",
+        "예를 들어서 정규 표현식이 a{2,}bc라면 뒤에 bc가 붙으면서 a의 개수가 2개 이상인 경우인 문자열과 매치합니다.  \n",
+        "또한 만약 {0,}을 쓴다면 *와 동일한 의미가 되며, {1,}을 쓴다면 +와 동일한 의미가 됩니다.\n",
+        "\n"
       ]
     },
     {
@@ -9228,7 +9268,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "[]기호"
+        "`[]`기호\n",
+        "\n",
+        "[ ]안에 문자들을 넣으면 그 문자들 중 한 개의 문자와 매치라는 의미를 가집니다.  \n",
+        "예를 들어서 정규 표현식이 [abc]라면, a 또는 b또는 c가 들어가있는 문자열과 매치됩니다. 범위를 지정하는 것도 가능합니다.  \n",
+        "[a-zA-Z]는 알파벳 전부를 의미하며, [0-9]는 숫자 전부를 의미합니다."
       ]
     },
     {
@@ -9364,7 +9408,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "[^문자] 기호"
+        "`[^문자]` 기호\n",
+        "\n",
+        "[^문자]는 ^기호 뒤에 붙은 문자들을 제외한 모든 문자를 매치하는 역할을 합니다.   \n",
+        "예를 들어서 [^abc]라는 정규 표현식이 있다면, a 또는 b 또는 c가 들어간 문자열을 제외한 모든 문자열을 매치합니다."
       ]
     },
     {
@@ -9436,15 +9483,183 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### re.match() 와 re.search()의 차이"
+        "### `re.match()` 와 `re.search()`의 차이\n",
+        "\n",
+        "search()가 정규 표현식 전체에 대해서 문자열이 매치하는지를 본다면, match()는 문자열의 첫 부분부터 정규 표현식과 매치하는지를 확인합니다.  \n",
+        "문자열 중간에 찾을 패턴이 있더라도 match 함수는 문자열의 시작에서 패턴이 일치하지 않으면 찾지 않습니다."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "r = re.compile('ab.')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "r.match('kabbb')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(1, 4), match='abb'>"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "r.search('kabba')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### `re.split()`\n",
+        "\n",
+        "정규표현식 기준으로 문자열을 분리"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['사과', '매론', '딸기', '과일']"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "text = '사과 매론 딸기 과일'\n",
+        "re.split(' ', text)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['사과,', '메론,', '딸기,', '과일']"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "text = '''사과,\n",
+        "메론,\n",
+        "딸기,\n",
+        "과일'''\n",
+        "re.split('\\n', text)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['사과', '딸기', '메론', '과일']"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "text = '사과+딸기+메론+과일'\n",
+        "re.split('\\+', text)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['010', '1234', '1234', '30']"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "text = \"\"\"이름 : 김철수\n",
+        "전화번호 : 010 - 1234 - 1234\n",
+        "나이 : 30\n",
+        "성별 : 남\"\"\"\n",
+        "\n",
+        "re.findall(\"[0-9]+\", text)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "`re.sub()`\n",
+        "\n",
+        "sub() 함수는 정규 표현식 패턴과 일치하는 문자열을 찾아 다른 문자열로 대체할 수 있습니다.  \n",
+        "아래와 같은 정제 작업에 많이 사용되는데, 영어 문장에 각주 등과 같은 이유로 특수 문자가 섞여있는 경우에 특수 문자를 제거하고 싶다면 알파벳 외의 문자는 공백으로 처리하는 등의 용도로 쓸 수 있습니다"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Regular expression  A regular expression regex or regexp \n",
+            "sometimes called a rational expression is in theoretical computer science and \n",
+            "formal language theory a sequence of characters that define a search pattern\n"
+          ]
+        }
+      ],
+      "source": [
+        "text = \"\"\"Regular expression : A regular expression, regex or regexp[1] \n",
+        "(sometimes called a rational expression)[2][3] is, in theoretical computer science and \n",
+        "formal language theory, a sequence of characters that define a search pattern.\"\"\"\n",
+        "\n",
+        "preprocessed_text = re.sub('[^a-zA-Z\\s]', '', text)\n",
+        "print(preprocessed_text)"
+      ]
     },
     {
       "cell_type": "markdown",
