--- a/사전.ipynb
+++ b/사전.ipynb
@@ -1091,7 +1091,7 @@
         "id": "x30ybv9PpdNy"
       },
       "source": [
-        "# 데이터 처리 함수 정리"
+        "# 데이터 처리 정리"
       ]
     },
     {
@@ -3668,7 +3668,7 @@
       "source": [
         "## 컬럼명 변경\n",
         "\n",
-        "* `df.rename`(columns = {'기존컬럼명1' : '바꿀컬럼명1',   '기존컬럼명2':'바꿀컬럼명2'}\n",
+        "* `df.rename(columns = {'기존컬럼명1' : '바꿀컬럼명1',   '기존컬럼명2':'바꿀컬럼명2'}`\n",
         "\n",
         "* 바뀐결과를 적용하려면 새로운 변수명으로 할당 필요"
       ]
@@ -4087,7 +4087,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4100,11 +4100,7 @@
         {
           "data": {
             "text/html": [
-              "\n",
-              "\n",
-              "  <div id=\"df-d05f7909-8b6b-4def-a379-3706db168fbf\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
+              "<div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -4160,149 +4156,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d05f7909-8b6b-4def-a379-3706db168fbf')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "\n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "\n",
-              "\n",
-              "\n",
-              "    <div id=\"df-697b5f78-bd5a-4912-a801-49bc24f8e779\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-697b5f78-bd5a-4912-a801-49bc24f8e779')\"\n",
-              "              title=\"Suggest charts.\"\n",
-              "              style=\"display:none;\">\n",
-              "\n",
-              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "     width=\"24px\">\n",
-              "    <g>\n",
-              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
-              "    </g>\n",
-              "</svg>\n",
-              "      </button>\n",
-              "    </div>\n",
-              "\n",
-              "<style>\n",
-              "  .colab-df-quickchart {\n",
-              "    background-color: #E8F0FE;\n",
-              "    border: none;\n",
-              "    border-radius: 50%;\n",
-              "    cursor: pointer;\n",
-              "    display: none;\n",
-              "    fill: #1967D2;\n",
-              "    height: 32px;\n",
-              "    padding: 0 0 0 0;\n",
-              "    width: 32px;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart:hover {\n",
-              "    background-color: #E2EBFA;\n",
-              "    box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "    fill: #174EA6;\n",
-              "  }\n",
-              "\n",
-              "  [theme=dark] .colab-df-quickchart {\n",
-              "    background-color: #3B4455;\n",
-              "    fill: #D2E3FC;\n",
-              "  }\n",
-              "\n",
-              "  [theme=dark] .colab-df-quickchart:hover {\n",
-              "    background-color: #434B5C;\n",
-              "    box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "    filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "    fill: #FFFFFF;\n",
-              "  }\n",
-              "</style>\n",
-              "\n",
-              "    <script>\n",
-              "      async function quickchart(key) {\n",
-              "        const containerElement = document.querySelector('#' + key);\n",
-              "        const charts = await google.colab.kernel.invokeFunction(\n",
-              "            'suggestCharts', [key], {});\n",
-              "      }\n",
-              "    </script>\n",
-              "\n",
-              "      <script>\n",
-              "\n",
-              "function displayQuickchartButton(domScope) {\n",
-              "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-697b5f78-bd5a-4912-a801-49bc24f8e779 button.colab-df-quickchart');\n",
-              "  quickchartButtonEl.style.display =\n",
-              "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "}\n",
-              "\n",
-              "        displayQuickchartButton(document);\n",
-              "      </script>\n",
-              "      <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-d05f7909-8b6b-4def-a379-3706db168fbf button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d05f7909-8b6b-4def-a379-3706db168fbf');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n"
+              "</div>"
             ],
             "text/plain": [
               "  col1 col2 col3\n",
@@ -4313,7 +4167,7 @@
               "4    B    y    뒤"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5334,7 +5188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -5690,7 +5544,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -5749,7 +5603,7 @@
               "2  300원  30원  3원"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5763,7 +5617,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -5818,7 +5672,7 @@
               "2  300원  30원"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5826,7 +5680,8 @@
       "source": [
         "df.apply(lambda x : x[:2], axis = 1)\n",
         "\n",
-        "# axis에 따라 행 or 열단위로 계산됨"
+        "# axis에 따라 행 or 열단위로 계산됨\n",
+        "# 지금은 특정열을 지정하지 않았기 때문에 axis = 1 기준으로 적용됨"
       ]
     },
     {
@@ -7043,6 +6898,118 @@
         "s.value_counts(dropna=False)\n",
         "\n",
         "# Na값도 같이 집계해준다"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### True False 반전시키는 방법\n",
+        "\n",
+        "* list\n",
+        "\n",
+        "* np.array\n",
+        "\n",
+        "* pd.series"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[False, True, True, False]"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# list case\n",
+        "\n",
+        "a = [True, False, False, True]\n",
+        "[not x for x in a]\n",
+        "\n",
+        "# -> 리스트 켐프리헨션 사용, not a는 안됨\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[False  True  True False]\n",
+            "[ True False False  True]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# np.array case\n",
+        "import numpy as np\n",
+        "\n",
+        "b = np.array(a)\n",
+        "print(np.logical_not(b))\n",
+        "print(b)\n",
+        "\n",
+        "# -> 새로운 배열에 할당해줘야된다"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0    False\n",
+              "1     True\n",
+              "2     True\n",
+              "3    False\n",
+              "dtype: bool"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# pd.series case\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "c = pd.Series(a)\n",
+        "~c"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([ True, False, False,  True])"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "b"
       ]
     },
     {
