--- a/사전.ipynb
+++ b/사전.ipynb
@@ -5165,9 +5165,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## pandas 날짜 처리 함수 정리\n",
+        "## 날짜 처리 함수 정리\n",
         "2023/10/26  \n",
         "참고 : https://docs.python.org/ko/3/library/datetime.html#timedelta-objects"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### pandas.Series.dt\n",
+        "\n",
+        "* datetime 과 pandas dt는 다르다\n",
+        "* dt는 판다스 Series에 존재하는 객체"
       ]
     },
     {
@@ -6120,6 +6130,150 @@
         "date_test2 = date_test.strftime('%Y-%m-%d')\n",
         "print(date_test2)\n",
         "print(type(date_test2))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### datetime\n",
+        "2023-10-31"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "datetime을 다루는 함수 strftime, strptime\n",
+        "* strftime : datetime객체를 문자열로 변환\n",
+        "* strptime : 문자열 형태의 날짝 객체를 datetime으로 변환"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "포맷 코드\n",
+        "\n",
+        "|지시자|의미|예시|\n",
+        "|:-|:-|:-|\n",
+        "|%w|요일을 10진수로 표현 0은 일요일 6읕 토요일|0, 1,..., 6|\n",
+        "|%d|월중 일을 0으로 채워진 10진수로|01, 02, ..., 31|\n",
+        "|%m|월을 0으로 채워진 10진수로|01,02,...12|\n",
+        "|%y|세기가 없는 해(year)을 0으로 채워진 10진수로|00,01,...,99|\n",
+        "|%Y|세기가 있는 해(year)을 10진수로|0001, 0002, ..., 2013, 2014,...9999|\n",
+        "|%H|시(24시간제)를 0으로 채워진 십진수로|00, 01, 02, ..., 23|\n",
+        "|%M|분을 0으로 채워진 10진수로|00,01,...,59|\n",
+        "|%S|초를 0으로 채워진 10진수로|00,01,...,59|\n",
+        "|%U, %W|연중 주를 0으로 채워진 10진수로|00,01,...53|\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from datetime import datetime"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2023-01-01 01:01:01\n"
+          ]
+        }
+      ],
+      "source": [
+        "now = datetime(2023,1,1,1,1,1)\n",
+        "print(now)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2023-01-01\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "date = now.strftime('%Y-%m-%d')\n",
+        "print(date)\n",
+        "print(type(date))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "01:01:01\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "time = now.strftime('%H:%M:%S')\n",
+        "print(time)\n",
+        "print(type(time))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2023-01-01 01:01:01\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "date_time = now.strftime('%Y-%m-%d %H:%M:%S')\n",
+        "print(date_time)\n",
+        "print(type(date_time))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2023-10-03 10:20:50\n",
+            "<class 'datetime.datetime'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "str_datetime = '2023-10-3 10:20:50'\n",
+        "currdate = datetime.strptime(str_datetime, '%Y-%m-%d %H:%M:%S')\n",
+        "print(currdate)\n",
+        "print(type(currdate))"
       ]
     },
     {
