--- a/사전.ipynb
+++ b/사전.ipynb
@@ -242,6 +242,110 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 3. tqdm"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from tqdm import tqdm\n",
+        "import time"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 10/10 [00:00<00:00, 81.37it/s]\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in tqdm(range(10)):\n",
+        "    time.sleep(0.01)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 10/10 [00:00<00:00, 80.85it/s]\n"
+          ]
+        }
+      ],
+      "source": [
+        "pbar = tqdm(range(10))\n",
+        "for i in pbar:\n",
+        "    time.sleep(0.01)\n",
+        "pbar.close() # 변수에 할당해서 사용할때는 close를 해줘야한다"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Description: 100%|====================| 10/10 [00:02<00:00,  4.90it/s]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 꾸미괴 옵션\n",
+        "\n",
+        "iterable = range(10)\n",
+        "for i in tqdm(iterable=iterable,\n",
+        "              total = len(iterable),\n",
+        "              desc = 'Description',\n",
+        "              ncols = 70,\n",
+        "              ascii = ' ='):\n",
+        "    time.sleep(0.2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "inner: 100%|██████████| 10/10 [00:00<00:00, 78.70it/s]\n",
+            "inner: 100%|██████████| 20/20 [00:00<00:00, 81.37it/s]\n",
+            "inner: 100%|██████████| 30/30 [00:00<00:00, 82.00it/s]\n",
+            "inner: 100%|██████████| 40/40 [00:00<00:00, 80.85it/s]\n",
+            "inner: 100%|██████████| 50/50 [00:00<00:00, 82.28it/s]\n",
+            "outer: 100%|██████████| 5/5 [00:01<00:00,  2.67it/s]\n"
+          ]
+        }
+      ],
+      "source": [
+        "for outer in tqdm([10, 20, 30, 40, 50], desc='outer', position=0): ## 출력되는 라인을 나타내는 position을 0 으로 두고\n",
+        "    for inner in tqdm(range(outer), desc='inner', position=1): ## 안쪽 루프의 진행률 출력은 그 아랫줄인 position = 1 로 설정하는 것이다.\n",
+        "        time.sleep(0.01)"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {
@@ -740,7 +844,7 @@
         "arr = np.array([[1,2,3],\n",
         "                [4,5,6]])\n",
         "\n",
-        "it = np.nditer(arr, flags = ['multi_index'], op_flags=['readwrite']) #op_flags는 왜 쓰는지 모르겠\n",
+        "it = np.nditer(arr, flags = ['multi_index']) #op_flags는 왜 쓰는지 모르겠\n",
         "\n",
         "while not it.finished:\n",
         "    idx = it.multi_index\n",
@@ -10212,12 +10316,22 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "tip\n",
+        "\n",
+        "1. ^[a]와 [^a]의 차이점\n",
+        "    * ^[a]는 a로 시작하는 문자열을 의미, [^a]는 a를 제외한 1개의 문자를 의미"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## 2. 정규 표현식 실습"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -10679,16 +10793,21 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "`[]`기호\n",
-        "\n",
+        "`[]`기호  \n",
+        "  \n",
         "[ ]안에 문자들을 넣으면 그 문자들 중 한 개의 문자와 매치라는 의미를 가집니다.  \n",
         "예를 들어서 정규 표현식이 [abc]라면, a 또는 b또는 c가 들어가있는 문자열과 매치됩니다. 범위를 지정하는 것도 가능합니다.  \n",
-        "[a-zA-Z]는 알파벳 전부를 의미하며, [0-9]는 숫자 전부를 의미합니다."
+        "[a-zA-Z]는 알파벳 전부를 의미하며, [0-9]는 숫자 전부를 의미합니다.  \n",
+        "  \n",
+        "\n",
+        "메타 문자의 경우 대괄호 안에서 사용하게 되면 문자 그대로 인식하게 된다.  \n",
+        "예를들어 a.b는 a와 b사이의 `1개 이상`의 어떤 문자라도 들어가면 된다라는 .의 의미를 갖지만  \n",
+        "a[.]b의 경우 a.b문자열에만 매칭된다"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -10697,7 +10816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -10706,7 +10825,7 @@
               "<re.Match object; span=(0, 1), match='a'>"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10717,7 +10836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -10726,7 +10845,7 @@
               "<re.Match object; span=(0, 1), match='a'>"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -11042,7 +11161,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "`re.sub()`\n",
+        "### `re.sub()`\n",
         "\n",
         "sub() 함수는 정규 표현식 패턴과 일치하는 문자열을 찾아 다른 문자열로 대체할 수 있습니다.  \n",
         "아래와 같은 정제 작업에 많이 사용되는데, 영어 문장에 각주 등과 같은 이유로 특수 문자가 섞여있는 경우에 특수 문자를 제거하고 싶다면 알파벳 외의 문자는 공백으로 처리하는 등의 용도로 쓸 수 있습니다"
@@ -11071,6 +11190,315 @@
         "preprocessed_text = re.sub('[^a-zA-Z\\s]', '', text)\n",
         "print(preprocessed_text)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 심화 예제"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "난이도 1: 기초  \n",
+        "이메일 주소 매칭: 이메일 주소를 찾아보세요.  \n",
+        "예: user@example.com "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 16), match='user@example.com'>"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# ip주소 맵핑\n",
+        "\n",
+        "ex_str = 'user@example.com'\n",
+        "\n",
+        "pattern = re.compile(r'\\w+[@]\\w+[.]com')\n",
+        "pattern.search(ex_str)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "난이도 2: 숫자와 문자 조합  \n",
+        "전화번호 매칭: 국가 코드를 포함한 전화번호를 찾아보세요.  \n",
+        "예: +1-555-555-5555"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<re.Match object; span=(0, 15), match='+1-555-555-5555'>"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ex_str = '+1-555-555-5555'\n",
+        "pattern = re.compile(r'^[+]\\d{1,3}[-]\\d{3}[-]\\d{3}[-]\\d{4}')\n",
+        "pattern.search(ex_str)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "난이도 3: 반복과 선택  \n",
+        "유효한 URL 매칭: http 또는 https로 시작하는 URL을 찾아보세요.  \n",
+        "예: https://www.example.com  \n",
+        "  \n",
+        "gpt는 특수문자를 사용할때 escape(\\)문자를 사용하라고 하지만 대괄호를 사용해도 똑같이 작동함, "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['https://www.example.com', 'http://www.badexample.com']"
+            ]
+          },
+          "execution_count": 75,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ex_str =  \"Visit our website at https://www.example.com for more information. Also, check http://www.badexample.com.\"\n",
+        "pattern = re.compile(r'https?:[/][/]www[.]\\w+[.]com')\n",
+        "pattern.findall(ex_str)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "난이도 4: 그룹화  \n",
+        "날짜 매칭: YYYY-MM-DD 형식의 날짜를 찾아보세요.  \n",
+        "예: 2022-01-01  \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['2022-01-01']"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ex_str = '2022-01-01'\n",
+        "pattern = re.compile(r'\\d{4}[-][0-1]?[0-9][-][0-3]?[0-9]')\n",
+        "pattern.findall(ex_str)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Year: 2022, Month: 01, Day: 01\n",
+            "Year: 2023, Month: 12, Day: 31\n"
+          ]
+        }
+      ],
+      "source": [
+        "import re\n",
+        "\n",
+        "pattern = re.compile(r'\\b(\\d{4})-(\\d{2})-(\\d{2})\\b')\n",
+        "text = 'The date is 2022-01-01 and another date is 2023-12-31.'\n",
+        "\n",
+        "matches = pattern.findall(text)\n",
+        "for match in matches:\n",
+        "    year, month, day = match\n",
+        "    print(f\"Year: {year}, Month: {month}, Day: {day}\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "난이도 5: 부정형 전방탐색  \n",
+        "전화번호 추출: 국가 코드가 미포함된 전화번호를 찾아보세요.  \n",
+        "예: 555-555-5555"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "난이도 6: 캡처 그룹  \n",
+        "이중 따옴표 내의 텍스트 추출: \" \" 사이의 텍스트를 추출하세요.  \n",
+        "예: \"Hello, World!\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['\"Hello world\"', '\"python\"']"
+            ]
+          },
+          "execution_count": 54,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ex_str = '\"Hello world\" used for \"python\" example sentence'\n",
+        "pattern = re.compile(r'[\"][^\"]+[\"]')\n",
+        "pattern.findall(ex_str)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "난이도 7: 중첩 괄호  \n",
+        "HTML 태그 추출: <tag> 또는 <tag attribute=\"value\"> 형식의 HTML 태그를 찾아보세요.  \n",
+        "예: \\<div>, \\<a href=\"https://example.com\">  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['<div>', '<a href=\"https://example.com\">']"
+            ]
+          },
+          "execution_count": 56,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ex_str = '<div>, <a href=\"https://example.com\"> is html tag'\n",
+        "pattern = re.compile(r'[<][^<>]+[>]')\n",
+        "pattern.findall(ex_str)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "주민등록번호 매칭: 국가 식별 번호가 포함된 주민등록번호를 찾아보세요.  \n",
+        "예: 123456-1234567  \n",
+        "뒷번호 첫자리는 1~4중 하나의 값"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['970903-101193']"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "ex_str = '970903-101193'\n",
+        "pattern = re.compile(r'[0-9]{6}\\-[1-4]{1}[0-9]{5}')\n",
+        "pattern.findall(ex_str)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "난이도 9: 다중 라인  \n",
+        "멀티라인 주석 추출: \\/* \\*/ 사이의 주석을 추출하세요.  \n",
+        "예: /* This is a comment */  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 73,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['This is a multiline\\n   comment.', 'Another multiline\\n   comment.']\n"
+          ]
+        }
+      ],
+      "source": [
+        "pattern = re.compile(r'\\/\\*\\s*(.*?)\\s*\\*\\/', re.DOTALL)\n",
+        "text = '''\n",
+        "/* This is a multiline\n",
+        "   comment. */\n",
+        "Some text outside the comment.\n",
+        "/* Another multiline\n",
+        "   comment. */\n",
+        "'''\n",
+        "\n",
+        "matches = pattern.findall(text)\n",
+        "print(matches)\n",
+        "\n",
+        "# re.DOTALL는 개행문자가 있을경우에도 같이 매칭해준다"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -11106,6 +11534,74 @@
         "cloned_model.n_estimators = 100\n",
         "#cloned_model.fit(X, y) 모델 fitting은 X,y 데이터가 없으므로 생략"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# `globals` 사용법\n",
+        "\n",
+        "* 반복되는 변수명을 지정할때 for문을 이용해서 변수명을 만들고 사용할수 있다\n",
+        "* 지금 예제에서는 사용하는 변수명이 3개 밖에 안되지만 더 많은 변수명을 사용하게 되는 경우 유용하게 사용할 수 있다"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "name_1 = 'kim'\n",
+        "name_2 = 'lee'\n",
+        "name_3 = 'park'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['name_1', 'name_2', 'name_3']"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "[f'name_{i+1}' for i in range(3)] #이런식으로 반복되는 변수명을 만들수는 있지만 값을 볼 수 는 없다 "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['kim', 'lee', 'park']"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "[globals()[f'name_{i+1}'] for i in range(3)] # globals를 사용하면 반복되는 변수명의 값을 가져 올 수 있음"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
